# syncmanager

./: .gitignore  LICENSE  Pipfile  README.md  main.py  requirements.txt  server-sync.properties.example  setup.py  setup.sh
clients/: __init__.py  deletion_registration.py  git.py  git_settings.py  git_sync.py  sync_client.py
docu/: cheatsheet.md  developer.md  troubleshooting.md
syncmanager/: __init__.py  main.py  server-sync.properties.example
syncmanager/clients/: deletion_registration.py  git_settings.py  git_sync.py  unison_sync.py
syncmanager/templates/unison/: unison_profile.prf.example
syncmanager/tests/: .gitignore  test_git_settings.py  test_git_sync.py
syncmanager/tests/templates/: local.conf.j2  localmod.conf.j2  others.conf.j2  server-sync.properties.j2  test.conf.j2
syncmanager/tests/utils/: testutils.py
syncmanager/util/: globalproperties.py  readconfig.py
syncmanagerapi/: .gitignore  Pipfile  README.md  alembic.ini  application.dev.cfg  application.dev.properties  application.e2e.cfg  application.prod.cfg.example  application.prod.properties.example  application.properties.example  pyproject.toml  setup.cfg  setup.py  swagger.yaml  waitress_server.py
syncmanagerapi/alembic/: env.py
syncmanagerapi/alembic/versions/: 001_add_filesystem_root_dir_to_user_client_env.py  8956b4aecefe_add_name_and_email_columns_to_user_git_repos.py  bed903c13b33_add_last_commit_date_column_to_git_.py
syncmanagerapi/deploy/: create_admin.sh  create_files.py  db_migrate.sh  install.sh  install_local.sh
syncmanagerapi/deploy/templates/: alembic.ini.j2  init_db.sql.j2  syncmanagerapi.service.j2
syncmanagerapi/syncmanagerapi/: __init__.py  __main__.py  authentication.py  authorization.py  cli.py  database.py  decorators.py  error.py  model.py  openapi.yaml  settings.py  swagger.yaml  utils.py  wsgi.py
syncmanagerapi/syncmanagerapi/admin/: __init__.py  controller.py
syncmanagerapi/syncmanagerapi/auth/: __init__.py
syncmanagerapi/syncmanagerapi/client/: api.py  fs.py
syncmanagerapi/syncmanagerapi/domain/: __init__.py
syncmanagerapi/syncmanagerapi/git/: api.py  git.py  model.py
syncmanagerapi/tests/: __init__.py  application.test.cfg  conftest.py  setup.py  test_git_api.py  test_user_api.py  testsetup.py
syncmanagerclient/: .gitignore  Pipfile  README.md  legacy.py  pyproject.toml  requirements.txt  server-sync.e2e-extra.ini  server-sync.e2e.ini  server-sync.ini.example  server-sync.properties.example  setup.py
syncmanagerclient/syncmanagerclient/: __init__.py  __main__.py  main.py  server-sync.properties.example
syncmanagerclient/syncmanagerclient/clients/: __init__.py  api.py  deletion_registration.py  error.py  git_archive_ignored.py  git_base.py  git_delete_repo.py  git_init_repo.py  git_settings.py  git_sync.py  sync_client.py  sync_dir_registration.py  sync_env_registration.py  unison_sync.py
syncmanagerclient/syncmanagerclient/exec/unix/: repo_init.sh
syncmanagerclient/syncmanagerclient/templates/unison/: sm_default.prf
syncmanagerclient/syncmanagerclient/util/: ArchiveConfig.py  baseconfig.py  error.py  gitconfig.py  globalproperties.py  readconfig.py  syncconfig.py  system.py
syncmanagerclient/tests/: .gitignore  conftest.py  server-sync.e2e.ini  test_git_settings.py  test_git_settings_sync_e2e.py  test_git_sync.py  test_git_sync_e2e.py  test_git_sync_with_conffiles.py  test_git_sync_with_syncmangerapi.py
syncmanagerclient/tests/templates/: others.conf.j2  server-sync.test.ini.j2
syncmanagerclient/tests/utils/: conffileutils.py  e2eutils.py  testutils.py
testlib/: api_utility.py  fixtures.py  testsetup.py
util/: __init__.py  globalproperties.py  readconfig.py  system.py
