[tool.poetry]
name = "syncmanagerapi"
version = "0.1.0"  # Replace with the actual version
description = "Provides Server for managing multiple synchronizations via unison, git, ..."
authors = ["Gerd Friemel <your.email@example.com>"]  # Replace with actual authors
license = "MIT"  # Replace with the correct license if applicable
readme = "README.md"
repository = "https://github.com/Grid-LTS/syncmanager"
homepage = "https://github.com/Grid-LTS/syncmanager"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
connexion = {extras = ["flask", "swagger-ui"], version = "^3.2.0"}
dotenv = "^0.9.9"
gitpython = "^3.1.44"
flask-basicauth = "^0.2.0"
flask-sqlalchemy = "^3.1.1"
flask-marshmallow = "^1.3.0"
marshmallow-sqlalchemy = "^1.4.2"
gunicorn = "^23.0.0"
swagger-ui-bundle = "^1.1.0"
waitress = {version = "^3.0.2", platform = "win32"}

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.5"


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncmanagerapi"
version = "0.1.0"  # Replace with the actual version
description = "A Python API project"
dependencies = [
    "gunicorn",
    "wheel",
    "jinja2",
    #"syncmanagerapi @ file://.",
    #"flask<=2.1.4",  # Version constrained due to possible bug in 2.2.x
    "mysqlclient>=1.4.6",
    "gitpython",
    "python-dotenv",
]


[tool.setuptools.packages.find]
where = ["src"]

