[tool.poetry]
name = "syncmanagerclient"
version = "0.1.0"  # Replace with the actual version
description = "For Managing multiple synchronizations via unison, git, ..."
authors = ["Gerd Friemel <your.email@example.com>"]  # Replace with actual authors
license = "MIT"  # Replace with the correct license if applicable
readme = "README.md"
repository = "https://github.com/Grid-LTS/syncmanager"
homepage = "https://github.com/Grid-LTS/syncmanager"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncmanagerclient"
version = "0.1.0"
description = "A Python project for Sync Job Manager"
dependencies = [
    "pathlib",
    "configparser",
    "GitPython",
    "Jinja2",
    "requests",
]


[project.optional-dependencies]
dev = []

[project.requires-python]
# Specified Python version in the Pipfile
python = ">=3.8"
