[tool.poetry]
name = "syncmanagerclient"
version = "0.1.0"  # Replace with the actual version
description = "For Managing multiple synchronizations via unison, git, ..."
authors = ["Gerd Friemel <your.email@example.com>"]  # Replace with actual authors
license = "MIT"  # Replace with the correct license if applicable
readme = "README.md"
repository = "https://github.com/Grid-LTS/syncmanager"
homepage = "https://github.com/Grid-LTS/syncmanager"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
python-dateutil = "^2.9.0.post0"
pytest-dependency = "^0.6.0"


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncmanagerclient"
version = "0.1.0"
requires-python = ">=3.12"
description = "A Python project for Sync Job Manager"
dependencies = [
    "pathlib",
    "configparser (>=7.2.0,<8.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]
dynamic = ["readme"]

[project.scripts]
syncmanager="syncmanagerclient:main"
syncmanager-legacy="syncmanagerclient:legacy"


[project.optional-dependencies]
dev = []

